// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account action creators Should correctly handle an empty personas table 1`] = `
Array [
  Object {
    "type": "SET_LOADING",
    "value": false,
  },
]
`;

exports[`Account action creators Should correctly handle more existing user identites 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:first",
  },
  Object {
    "params": Object {
      "flag": "default",
    },
    "routeName": "Exception",
    "type": "Navigation/NAVIGATE",
  },
]
`;

exports[`Account action creators Should correctly handle one existing user identity 1`] = `
Array [
  Object {
    "type": "DID_SET",
    "value": "did:jolo:mock",
  },
  Object {
    "params": Object {
      "flag": "default",
    },
    "routeName": "Exception",
    "type": "Navigation/NAVIGATE",
  },
]
`;
